--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/anders462/filemetaformat#readme",
   "dependencies": {
     "dotenv": "^1.2.0",
-    "multer": "^1.1.0"
+    "multer": "^1.1.0",
+    "express": "^4.13.3"
+  },
+  "engines": {
+    "node": "4.2.3"
   }
 }
